--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="container">                       
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
             <div class="profile-content pull-left">
-                <h1 class="name">Sagar Shirbhate</h1>
-                <h2 class="desc">iOS App Developer</h2>   
+                <h1 class="name">Stephen Barungi</h1>
+                <h2 class="desc">Android App Developer</h2>   
                 <ul class="social list-inline">
                     <li><a href="https://www.facebook.com/19665stevebaros"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/stevebaros"><i class="fa fa-twitter"></i></a></li>
@@ -52,7 +52,7 @@
                     <li><a href="#"><i class="fa fa-tag"></i></a></li>
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="https://app.box.com/s/b97pjrsu55o55gwzgjitxfz2lxcwpyav" target="_blank"><i class="fa fa-paper-plane"></i> Download Resume</a>
+            <a class="btn btn-cta-primary pull-right" href="about.me/stevebaros" target="_blank"><i class="fa fa-paper-plane"></i> Download Resume</a>
         </div><!--//container-->
     </header><!--//header-->
     
@@ -206,9 +206,9 @@
                         <h2 class="heading">Contact Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Pune , India</li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">sagarshirbhate@outlook.com</a></li>
-                                <li><i class="fa fa-mobile"></i><span class="sr-only">Mobile:</span><a href="#">+91 70 30 90 50 30</a></li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Planet , Earth</li>
+                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">sbarungi@hamsoftug.com</a></li>
+                                <li><i class="fa fa-mobile"></i><span class="sr-only">Mobile:</span><a href="#">+256 702 888 123</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
@@ -221,7 +221,7 @@
                              <ul class="list-unstyled">
                                 <li><i class="fa fa-stack-overflow"></i>
                                      <a href="https://stackoverflow.com/users/3820244/stevebaros">
-                                         <img src="https://stackexchange.com/users/flair/5753644.png" width="208" height="58" alt="profile for Sagar Shirbhate at Stack Overflow" title="profile for Sagar Shirbhate at Stack Overflow">
+                                         <img src="https://stackexchange.com/users/flair/3820244.png" width="208" height="58" alt="profile for  Stack Overflow" title="profile at Stack Overflow">
                                              </a>
                                  </li>
                                  
@@ -310,8 +310,8 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">                      
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Master in Computer Applications</h3>
-                                <h4 class="university">University of Pune <span class="year">(2011-2014)</span></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Master in mobile Applications</h3>
+                                <h4 class="university">University of Pune <span class="year">(2018-2019)</span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelor of Science in software Engineering</h3>
