--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
             <div class="profile-content pull-left">
                 <h1 class="name">Stephen Barungi</h1>
-                <h2 class="desc">Android App Developer</h2>   
+                <h2 class="desc">Software Engineer</h2>   
                 <ul class="social list-inline">
                     <li><a href="https://www.facebook.com/19665stevebaros"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/stevebaros"><i class="fa fa-twitter"></i></a></li>
@@ -76,12 +76,12 @@
             <h2 class="heading">Work Experience</h2>
             <div class="content">
                 <div class="item">
-                    <h3 class="title">Android Developer - <span class="place"><a href="https://www.benchmarkitsolutions.com/">Benchmark IT Solutions Pvt. Ltd.</a></span> <span class="year">(2015 - Present)</span></h3>
-                    <p>Developing and maintaining iPhone/IPad apps. Also working as a team lead of 5-6 members. Working on a corporate apps, which involves purely business logics.</p>
+                    <h3 class="title">Android Developer - <span class="place"><a href="https://www.hamsoftug.com/">Ham Apss and Softwares. Ltd.</a></span> <span class="year">(2015 - Present)</span></h3>
+                    <p>Developing and maintaining  apps. Also working as a team lead of 3-4 members. Working on a corporate apps, which involves purely business logics.</p>
                 </div><!--//item-->
                 <div class="item">
-                    <h3 class="title">Android Developer - <span class="place"><a href="http://www.ideologisystems.com/">Ideologi Systems Pvt. Ltd.</a></span> <span class="year">(2014 - 2015)</span></h3>
-                    <p>Developing and maintaining iPhone/IPad apps. Worked as Whole-n-Sole.From Strach to Upload App to the Store.Worked on a Entertainment Apps ,Social apps.</p>
+                    <h3 class="title">Android Developer - <span class="place"><a href="http://www.ideologisystems.com/">Ideologi Systems P. Ltd.</a></span> <span class="year">(2014 - 2015)</span></h3>
+                    <p>Developing and maintaining  apps. Worked as Whole-n-Sole.From Strach to Upload App to the Store.</p>
                 </div><!--//item-->
             </div><!--//content-->
         </div><!--//section-inner-->
